@@ -57,6 +57,7 @@ coff-tic80.c
 coff-u68k.c
 coff-w65.c
 coff-we32k.c
+coff-x86_64.c
 coff-z80.c
 coff-z8k.c
 corefile.c
@@ -105,6 +106,7 @@ cpu-pj.c
 cpu-powerpc.c
 cpu-rs6000.c
 cpu-s390.c
+cpu-score.c
 cpu-sh.c
 cpu-sparc.c
 cpu-tic30.c
@@ -168,6 +170,7 @@ elf32-or32.c
 elf32-pj.c
 elf32-ppc.c
 elf32-s390.c
+elf32-score.c
 elf32-sh64.c
 elf32-sh64-com.c
 elf32-sh.c
@@ -271,21 +274,25 @@ osf-core.c
 pc532-mach.c
 pdp11.c
 pe-arm.c
+pe-arm-wince.c
 pef.c
 pef.h
 pef-traceback.h
 pe-i386.c
 pei-arm.c
+pei-arm-wince.c
 peicode.h
 pei-i386.c
 pei-mcore.c
 pei-mips.c
 pei-ppc.c
 pei-sh.c
+pei-x86_64.c
 pe-mcore.c
 pe-mips.c
 pe-ppc.c
 pe-sh.c
+pe-x86_64.c
 ppcboot.c
 reloc16.c
 reloc.c
